# humanitude

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml
launch/: mult_kin.launch  mult_kin.launch~
src/: camera_single_subscriber.cpp  camera_single_subscriber.cpp~  camera_single_subscriber.h  camera_single_subscriber.h~  camera_subscriber.cpp  camera_subscriber.cpp~  camera_subscriber.h  camera_subscriber.h~  humanitude_project.cpp  humanitude_project.cpp~  openpose_flags.cpp  openpose_flags.cpp~  person.cpp  person.cpp~  person.h  person.hpp~  person.h~  pose_estimator.cpp  pose_estimator.cpp~  pose_estimator.h  pose_estimator.h~
